[project]
name = "starrupturesaveeditor"
version = "0.1.0"
description = "Editor for Star Rutpure save files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lz4>=4.4.5",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
]
